Removed footer on small screens, it took up too much real estate, fixed navbar so that clicking closes the hamburger menu, adjusted tape decoration position

--- a/src/components/layout/Footer.css
+++ b/src/components/layout/Footer.css
@@ -13,3 +13,9 @@
 .footer p {
     margin: 0;
 }
+
+@media (max-width: 768px) {
+    .footer {
+        display: none;
+    }
+}
